# backend/api/doc/api_doc_search.go
@@ -1,6 +1,7 @@
 package doc
 
 import (
+	"backend/common/business"
 	"backend/common/es/indices"
 	"github.com/haozzzzzzzz/go-rapid-development/api/code"
 	"github.com/haozzzzzzzz/go-rapid-development/web/ginbuilder"
@@ -30,6 +31,25 @@ var DocEsInitAhDoc ginbuilder.HandleFunc = ginbuilder.HandleFunc{
 		err = esClient.AhDocCreateIndex()
 		if nil != err {
 			ctx.Errorf(code.CodeErrorElasticsearchCreate.Clone(), "create index failed. %s", err)
+			return
+		}
+
+		ctx.Success()
+		return
+	},
+}
+
+var DocEsIndexAllAhDoc ginbuilder.HandleFunc = ginbuilder.HandleFunc{
+	HttpMethod: "POST",
+	RelativePaths: []string{
+		"/api/api_hub/v1/doc/es/index_all_ah_doc",
+	},
+	Handle: func(ctx *ginbuilder.Context) (err error) {
+		reqCtx := ctx.RequestCtx
+		bsDoc := business.NewBsDoc(reqCtx)
+		err = bsDoc.EsIndexAllAhDoc()
+		if nil != err {
+			ctx.Errorf(code.CodeErrorElasticsearch.Clone(), "index all ah_doc failed. %s", err)
 			return
 		}
 
